product listing form done

--- a/src/main/webapp/static/css/styles.css
+++ b/src/main/webapp/static/css/styles.css
@@ -53,7 +53,7 @@
     font-weight: bold;
 }
 
-.main_section  input[type=text], input[type=password], input[type=email]{
+.main_section  input[type=text], input[type=password], input[type=email], textarea, select, input[type=time], input[type=file]{
     border-radius: 20px;
     margin-top: 5px;
     width:100%;
@@ -94,5 +94,5 @@
 }
 
 .seller_home{
-    margin-top: 50px;
+    margin-top: 30px;
 }
