--- a/src/main/webapp/static/css/styles.css
+++ b/src/main/webapp/static/css/styles.css
@@ -62,7 +62,7 @@
     font-weight: bold;
 }
 
-.main_section  input[type=text], input[type=password], input[type=email], textarea, select, input[type=datetime-local], input[type=file]{
+.main_section  input[type=text], input[type=password], input[type=email], textarea, select, input[type=datetime-local], input[type=file], input[type=number]{
     border-radius: 20px;
     margin-top: 5px;
     width:100%;
